--- a/templates/lab7/index.html
+++ b/templates/lab7/index.html
@@ -18,6 +18,10 @@
     position: absolute;
     padding: 20px;
 }
+
+.error-message {
+    color: red;
+}
 </style>
 {% endblock %}
 
@@ -64,6 +68,7 @@
     <label>
         Описание:
         <textarea id="description"></textarea>
+        <div id="description_error" class="error-message"></div>
     </label><br>
 
     <button onclick="sendFilm()">ОК</button>
