--- a/templates/lab7/index.html
+++ b/templates/lab7/index.html
@@ -5,24 +5,7 @@
 
 {% block script %}
 <script src="{{ url_for('static', filename='lab7/main.js') }}"></script>
-<style>
-.modal {
-    display: none;
-    z-index: 100;
-    box-shadow: 3px 3px 5px black;
-    background: white;
-    width: 400px;
-    left: 50%;
-    top: 220px;
-    margin-left: -200px;
-    position: absolute;
-    padding: 20px;
-}
-
-.error-message {
-    color: red;
-}
-</style>
+<link rel="stylesheet" href="{{ url_for('static', filename='lab7/style.css') }}">
 {% endblock %}
 
 {% block main %}
@@ -47,31 +30,33 @@
     <button onclick="addFilm()">Добавить фильм</button>
 </div>
 
-<div class="modal">
-    <input type="hidden" id="id">
-    <label>
-        Название фильма на русском:
-        <input type="text" id="title_ru">
-    </label><br>
+<div id="film-modal" class="modal">
+    <div> <!-- Добавьте этот внутренний div -->
+        <input type="hidden" id="id">
+        <label>
+            Название фильма на русском:
+            <input type="text" id="title.ru">
+        </label><br>
 
-    <label>
-        Название фильма на оригинальном языке
-        <i>(если фильм русский, то оставьте пустым):</i>
-        <input type="text" id="title">
-    </label><br>
+        <label>
+            Название фильма на оригинальном языке
+            <i>(если фильм русский, то оставьте пустым):</i>
+            <input type="text" id="title">
+        </label><br>
 
-    <label>
-        Год выпуска:
-        <input type="number" id="year">
-    </label><br>
+        <label>
+            Год выпуска:
+            <input type="number" id="year">
+        </label><br>
 
-    <label>
-        Описание:
-        <textarea id="description"></textarea>
-        <div id="description_error" class="error-message"></div>
-    </label><br>
+        <label>
+            Описание:
+            <textarea id="description"></textarea>
+            <div id="description_error" class="error-message"></div>
+        </label><br>
 
-    <button onclick="sendFilm()">ОК</button>
-    <button onclick="cancel()">Отмена</button>
+        <button onclick="sendFilm()">ОК</button>
+        <button onclick="cancel()">Отмена</button>
+    </div>
 </div>
 {% endblock %}
